@@ -1,0 +1,8 @@
+c { dg-do run }
+c { dg-skip-if "non-standard options" { *-*-* } { "-ffixed-line-length*" "-f*pad-source" } }
+      character(80) a
+      a = 'abc
+     +def'
+      if (a(:61) .ne. 'abc') stop 1
+      if (a(62:) .ne. 'def') stop 2
+      end
